add endpoint to get no usage emotes
